# rust_crossbeam_training

./: README.md
Small_Project/: README.md
Small_Project/01_ratatui_ex/: README.md
Small_Project/01_ratatui_ex/ratatui_todo/: Cargo.toml
Small_Project/01_ratatui_ex/task-rustler/: .gitignore  Cargo.toml  LICENSE  README.md
Small_Project/01_ratatui_ex/task-rustler/src/: app.rs  command.rs  date.rs  lib.rs  main.rs  task.rs  task_db.rs  task_manager.rs  ui.rs
Small_Project/01_ratatui_ex/task-rustler/src/export/: exporters.rs  file_writer.rs  mod.rs
Small_Project/01_ratatui_ex/task-rustler/tests/: commands_test.rs  exporters_test.rs  test_task_service.rs
Small_Project/pets_list/: Cargo.toml
Small_Project/pets_list/data/: db.json
Small_Project/pets_list/src/: main.rs
Small_Project/pets_lists_final/: Cargo.toml
Small_Project/pets_lists_final/data/: db.json
Small_Project/pets_lists_final/src/: main.rs
Tutorials/a01_crossbeam_injector_stealer_worker/: Cargo.toml  README.md
training/crossbeam_newfifo01/: Cargo.toml
training/crossbeam_newfifo01/src/: main.rs
